<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginRight="25dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:text="@string/City"
                            android:textColor="@color/headerBlack"
                            android:textSize="16dp" />

                        <ImageView
                            android:layout_width="36dp"
                            android:layout_height="36dp"
                            android:src="@drawable/ic_baseline_keyboard_arrow_down_24" />
                    </LinearLayout>

                    <ImageView
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:src="@drawable/ic_baseline_qr_code_scanner_24" />
                </LinearLayout>

                <com.denzcoskun.imageslider.ImageSlider
                    android:id="@+id/image_slider"
                    android:layout_width="wrap_content"
                    android:layout_height="250dp"
                    app:iss_auto_cycle="true"
                    app:iss_delay="5000"
                    app:iss_period="5000"
                    app:iss_text_align="CENTER" />

                <HorizontalScrollView
                    android:id="@+id/hScrollView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginBottom="5dp">

                        <Button
                            android:id="@+id/btn1"
                            android:layout_width="132dp"
                            android:layout_height="45dp"
                            android:backgroundTint="@color/buttonPinkT"
                            android:enabled="false"
                            android:text="@string/btn_1"
                            android:textColor="@color/buttonPink"
                            android:textSize="11dp" />

                        <Button
                            android:id="@+id/btn2"
                            android:layout_width="132dp"
                            android:layout_height="45dp"
                            android:layout_marginLeft="5dp"
                            android:backgroundTint="@color/buttonMenuGreyT"
                            android:enabled="false"
                            android:text="@string/btn_2"
                            android:textColor="@color/buttonMenuGreyEnabled"
                            android:textSize="11dp" />

                        <Button
                            android:id="@+id/btn3"
                            android:layout_width="132dp"
                            android:layout_height="45dp"
                            android:layout_marginLeft="5dp"
                            android:backgroundTint="@color/buttonMenuGreyT"
                            android:enabled="false"
                            android:text="@string/btn_3"
                            android:textColor="@color/buttonMenuGreyEnabled"
                            android:textSize="11dp" />

                        <Button
                            android:id="@+id/btn4"
                            android:layout_width="132dp"
                            android:layout_height="45dp"
                            android:layout_marginLeft="5dp"
                            android:backgroundTint="@color/buttonMenuGreyT"
                            android:enabled="false"
                            android:text="@string/btn_4"
                            android:textColor="@color/buttonMenuGreyEnabled"
                            android:textSize="11dp" />
                    </LinearLayout>
                </HorizontalScrollView>

            </LinearLayout>

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Dark" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:itemCount="12"
        tools:listitem="@layout/item"
        android:layout_margin="5dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_baseline_fastfood_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/BottomName_1"
                android:textColor="@color/buttonPink"
                android:textSize="12dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_baseline_person_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/BottomName_2"
                android:textColor="@color/buttonGrey"
                android:textSize="12dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:orientation="vertical">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_baseline_restore_from_trash_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/BottomName_3"
                android:textColor="@color/buttonGrey"
                android:textSize="12dp" />
        </LinearLayout>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>